# kt_epimodel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: OPEN_QUESTIONS.md  PAPER_OUTLINE.md  ROADMAP.md  STAGE2_DESIGN.md  presentation.md
notebooks/: calibration_01_fit.ipynb  calibration_02_full_fit.ipynb  calibration_03_by_age.ipynb  calibration_04_1_nelder_mead.ipynb  calibration_04_2_lbfgsb.ipynb  calibration_04_3_compare.ipynb  demo_single_season.ipynb
src/kt_epimodel/: __init__.py
src/kt_epimodel/calibration/: __init__.py  ili_target.py  loss.py  optimizer.py  param_vector.py  simple_model.py
src/kt_epimodel/model/: __init__.py  compartments.py  dynamics.py  foi.py  mobility_tensor.py  parameters.py
src/kt_epimodel/simulation/: __init__.py  runner.py  solver.py
tests/: test_compartments.py  test_dynamics.py  test_foi.py  test_ili_target.py  test_loss.py  test_mobility_tensor.py  test_optimizer.py  test_param_vector.py  test_parameters.py  test_runner.py  test_setup.py  test_simple_model.py  test_solver.py
