[project]
name = "kt-epimodel"
version = "0.1.0"
description = "Sudogwon metapop influenza model + sick-leave ICER analysis"
requires-python = ">=3.12"
dependencies = [
    "kt-data",
    "scipy",
    "numpy",
    "matplotlib",
    "polars",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kt_epimodel"]

[tool.uv.sources]
kt-data = { path = "../kt_data", editable = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
    "jupyter",
]
